AB#000000: header mobile menu brand border and overflow fix.

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -5,7 +5,7 @@ $main-menu-medium: $medium;
 .main-nav {
   &__desktop {
     display: none;
-  
+
     @include large {
       display: block;
     }
@@ -23,9 +23,22 @@ $main-menu-medium: $medium;
 
     .header__primary--open & {
       display: flex;
-  
+
       @include large {
         display: none;
+      }
+    }
+
+    &__border {
+      position: relative;
+      bottom: (-$brand-border-offset);
+      width: 100%;
+
+      svg {
+        display: block;
+        width: 100%;
+        height: auto;
+        fill: clr(secondary);
       }
     }
   }
